
pkgdatadir = @ZORP_PYTHON_DIR@

pkgdata_DATA = Auth.py AuthDB.py Base.py Core.py Chainer.py Common.py \
	Dispatch.py Subnet.py Listener.py Matcher.py NAT.py \
	Proxy.py Router.py Receiver.py Service.py Session.py \
	SockAddr.py Stream.py Zone.py Zorp.py __init__.py \
	Globals.py Cache.py Resolver.py Stack.py Config.py \
	Keybridge.py Util.py Rule.py Exceptions.py \
	Encryption.py LegacyEncryption.py Detector.py \
	Instance.py InstancesConf.py \
	ResolverCache.py FileLock.py

pkgdata_DATA += \
	APR.py \
	AnyPy.py \
	Finger.py \
	Ftp.py \
	Http.py \
	Plug.py \
	Pop3.py \
	Smtp.py \
	Telnet.py \
	Whois.py

EXTRA_DIST = $(pkgdata_DATA)
