ERROR_FILES = clientsyntax.html connecterror.html internal.html \
	invalidurl.html ioerror.html policysyntax.html policyviolation.html \
	serversyntax.html auth.html servertimeout.html clienttimeout.html badcontent.html ftperror.html \
	redirect.html authform.html

EXTRA_DIST = $(ERROR_FILES)

pkgdatadir = ${ZORP_DATADIR}/http/hu

pkgdata_DATA = $(ERROR_FILES)
